issue with image on iphone

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -318,7 +318,7 @@ body {
     height: 130vh;
   }
   #vssmain{
-    width: 65%;
+    width: 35%;
   }
   .exhaust-flame{
     height: 237px !important;
